fdo#51232: i#119987# fix Impress crash when pasting text under Outline view

Patch by: Wang Zhe
Testing by: Yan Ji
Review by: hdu

(cherry picked from commit 484621239c7f743f44579d2b199b0347dc4734cd)

Change-Id: I340de4f1b626defa52ecc48938c63ec4d1ce5c1d
Signed-off-by: Tor Lillqvist <tml@iki.fi>
Reviewed-on: https://gerrit.libreoffice.org/1897
Reviewed-by: Joren De Cuyper <joren.libreoffice@telenet.be>
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>
(cherry picked from commit 639f739fbcfb5421c7b7173c700136f169e38bc8)