sd/source/ui/view/outlnvs2.cxx
@@ -243,6 +243,7 @@ void OutlineViewShell::FuTemporary(SfxRequest &rReq)
                 else
                     xPresentation->rehearseTimings();
             }
+            Cancel();
             rReq.Done();
         }
         break;
